[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/game/PathRec.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[node name="PathRec" type="Spatial"]
script = ExtResource( 1 )

[node name="LineGeom" type="ImmediateGeometry" parent="."]
material_override = SubResource( 2 )

[node name="EnemyPosSaveTimeout" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartTime" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="EnemyPosSaveTimeout" to="." method="_on_EnemyPosSaveTimeout_timeout"]
[connection signal="timeout" from="StartTime" to="." method="_on_StartTime_timeout"]
